@@ -1,4 +1,4 @@
-LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.309 $>
+LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.310 $>
 
 
 [Note: This file does not mention every change made to the NetBSD source tree.
@@ -40,3 +40,8 @@ Changes from NetBSD 2.0 to NetBSD 2.1:
 	postfix: Postfix 2.1.0 imported.  [heas 20040427]
 	i386: Add support for Enhanced SpeedStep Technology, from
 		Michael Eriksson on port-i386.  [lukem 20040430]
+	libc: Make gmon / mcount work properly for threaded applications
+		by keeping thread-specific gmonparam structures and then
+		merging them before dumping the profile buffers.  Written
+		by Nathan J. Williams, contributed by Wasabi Systems, Inc.
+		[thorpej 20040510]
